added html snippets

--- a/lua/snippets/package.json
+++ b/lua/snippets/package.json
@@ -8,6 +8,10 @@
       {
         "language": ["scss", "sass"],
         "path": "./sass.json"
+      },
+      {
+        "language": "html",
+        "path": "./html.json"
       }
     ]
   }
